finished swagger and fixed users delete, and some other stuff
